# Novalis

./: .gitignore  CMakeLists.txt  DataUtil.h  EditorUtil.cpp  EditorUtil.h  Event.h  ID.cpp  ID.h  IDS.json  Instance.cpp  Instance.h  Novalis_V3.vcxproj  Novalis_V3.vcxproj.filters  README.md  Rect.h  RenderTypes.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneEditor.cpp  SceneEditor.h  Sprite.cpp  Sprite.h  SpriteEditor.cpp  SpriteEditor.h  TextEditor.cpp  TextEditor.h  Texture.h
App/editor/: App.cpp  EditedObjectData.h  NodeEditor.h  SpecialPoint.h  TaskBar.h  ToolDisplay.h  WindowLayout.h
Bonefall/: CMakeLists.txt
Bonefall/assets/nodes/: bone.nv_node  bonefall.nv_node  skull.nv_node
Bonefall/src/: Bone.cpp  Bone.h  PlayerGravity.cpp  PlayerGravity.h  main.cpp
NodeEditor/: CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  imgui.ini  vcpkg.json
NodeEditor/src/: App.cpp  AsyncWork.h  BufferedAlias.h  EditedObjectData.h  EditedObjectGroup.h  Enum.h  ErrorPopup.cpp  ErrorPopup.h  File.cpp  File.h  FileDialog.cpp  FileDialog.h  FileDropdown.cpp  FileDropdown.h  FileID.h  Graph.h  ImGuiID.cpp  ImGuiID.h  ImageType.h  Layer.h  LayerDropdown.cpp  LayerDropdown.h  MultiSpritesheetCreator.cpp  MultiSpritesheetCreator.h  NameManager.cpp  NameManager.h  NodeEditor.cpp  NodeEditor.h  NodeLayout.cpp  NodeLayout.h  NodeManager.cpp  NodeManager.h  NodeSerialization.cpp  NodeSerialization.h  NodeTabList.cpp  NodeTabList.h  NovalisRoot.cpp  NovalisRoot.h  ObjectByteSizeCalculator.h  ObjectDropdown.cpp  (+44 more)
NodeEditor/src/tests/: NodeFileTests.h
NodeEditor_CLion_Build/: CMakeLists.txt
NodeEditor_CLion_Build/src/: BufferedNodeSerialization.h  NodeEditor.h  NodeEditor.ixx  PolygonOutline.h  TaskBar.h  WindowLayout.h
NodeEditor_Modules/: CMakeLists.txt
NodeEditor_Modules/src/: EditedObjectGroup.h  Layer.h  main.cpp
Redmane/: CMakeLists.txt
Redmane/Project/: project.json
Redmane/src/: Cave.cpp  Cave.h  Gravity.h  Knight.cpp  Knight.h  Player.cpp  Player.h  main.cpp
imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
include/: Arena.h  Button.h  Collision.h  DataUtil.h  EditorUtil.h  Event.h  EventHandler.h  ID.h  Instance.h  MultitextureSprite.h  Namespace.h  Network.h  Node.h  Physics.h  Rect.h  RenderTypes.h  Renderer.h  Scene.h  SceneEditor.h  Sprite.h  SpriteEditor.h  Text.h  Texture.h
scenes/: level_1.txt  title.txt
src/: Arena.cpp  BackgroundEditor.cpp  Collision.cpp  DataUtil.cpp  Data_Util.ixx  EditorApp.cpp  EditorUtil.cpp  Event.cpp  EventHandler.ixx  Game.ixx  HomeEditor.cpp  ID.cpp  Instance.cpp  MultitextureSprite.cpp  Network.cpp  Node.cpp  Rect.cpp  RenderObj.ixx  RenderTypes.cpp  Renderer.cpp  Scene.cpp  Scene.ixx  SceneEditor.cpp  Sprite.cpp  SpriteEditor.cpp  Text.cpp  Texture.cpp  main.cpp
static_objects/: player.txt  texture_legend_obj.txt  title_screen.txt
temp/: DataUtil.cpp  DataUtil.h  EditorApp.cpp  EditorUtil.cpp  EditorUtil.h  Event.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneEditor.cpp  SceneEditor.h  Sprite.cpp  Sprite.h  SpriteEditor.cpp  SpriteEditor.h  Texture.cpp  Texture.h
(+153 files in other folders)
